# PluginTemplate

./: Cargo.toml  README.md  manifest.json
src/: lib.rs
